--- a/.github/workflows/flutter-actions.yml
+++ b/.github/workflows/flutter-actions.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Cache Flutter dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: |
             ~/.pub-cache
@@ -38,12 +38,12 @@ jobs:
 
       - uses: actions/setup-java@v2
         with:
-          distribution: 'zulu'
-          java-version: '11'
+          distribution: "zulu"
+          java-version: "11"
 
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.2'
+          flutter-version: "3.22.2"
 
       - run: flutter pub get
 
@@ -54,4 +54,4 @@ jobs:
         with:
           artifacts: "build/app/outputs/apk/release/*"
           token: ${{ secrets.STARTER_APP }}
-          tag: v1.0.${{ github.run_number }} 
+          tag: v1.0.${{ github.run_number }}
