--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,12 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Generated files
+*.g.dart
+*.freezed.dart
+
+# Generated plugin registrant file
+generated_plugin_registrant.cc
+generated_plugin_registrant.h
+GeneratedPluginRegistrant.swift
