--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  equatable: ^2.0.7
+  retrofit: ^4.4.2
+  json_annotation: ^4.9.0
+  get_it: ^8.0.3
+  freezed_annotation: ^3.0.0
+  connectivity_plus: ^6.1.3
+  auto_route: ^10.0.1
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +52,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  freezed: ^3.0.4
+  json_serializable: ^6.9.4
+  auto_route_generator: ^10.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
